--- a/src/views/index/index.css
+++ b/src/views/index/index.css
@@ -6,7 +6,13 @@
   overflow:hidden;
 }
 .wrap section{
-  flex:1;
+  width:100%;
+  height:100%;
   overflow: hidden;
   font-size:18px;
+}
+.warp .footer{
+  width: 100%;
+  height: 1rem;
+  flex-shrink: 0;
 }
